sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:13: error: not found: value int
    ecart = int(ecart/2)
            ^